src/style.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light-dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  box-sizing: content-box;

  font-size: 4.25vw;

  --bg-color: #181818;
  --text-color: #ffffff;
  --cell-bg-color: #222222;
  --cell-border-width: 4px;
  --cell-border-radius: 0.75rem;
  --cell-size: 4rem;
  --cell-gap: 0.5rem;
  --tile-border-radius: 0.5rem;
  --tile-size: 3rem;

  --primary-color: #e11d48;
  --primary-border-color: #881337;
  --secondary-color: #2563eb;
  --secondary-border-color: #1e3a8a;
  --tertiary-color: #16a34a;
  --tertiary-border-color: #14532d;

  background-color: var(--bg-color);
  color: var(--text-color);
  transition: background-color 0.3s, color 0.3s;
}

@media screen and (min-width: 520px) {
  :root {
    font-size: 18px;
  }
}

html {
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

body {
  margin: 0;
}

#app {
  width: 100%;
  height: 100%;
}

canvas {
  width: 100%;
  height: 100%;
}

h1 {
  margin-top: 0;
  font-size: 3rem;
  letter-spacing: -0.05em;
  font-weight: 900;
  text-align: center;
}

.grid {
  width: calc(((var(--cell-size)) * 5) + ((var(--cell-gap)) * 4));
  height: calc(((var(--cell-size)) * 5) + ((var(--cell-gap)) * 4));

  display: grid;
  grid-template-columns: repeat(5, var(--cell-size));
  grid-template-rows: repeat(5, var(--cell-size));
  grid-gap: var(--cell-gap);

  position: relative;
  margin: auto;

  transition: grid-gap 0.3s, width 0.3s, height 0.3s;
}

.cell {
  width: 100%;
  height: 100%;

  display: flex;
  justify-content: center;
  align-items: center;

  background-color: var(--cell-bg-color);
  border-radius: var(--cell-border-radius);

  cursor: pointer;
  transition: background-color 0.3s, border-radius 0.3s;
}

.cell[aria-disabled="true"] {
  pointer-events: none;
}

.cell.active {
  /* background-color:var(--bg-color); */
  background-color: #ffffff15;
}

.cell:hover {
  background-color: #ffffff33;
}

.game-footer {
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
  margin-top: 1rem;
}

.game-footer > div {
  display: flex;
  align-items: center;
}

.game-footer > div > span {
  margin: 0 1rem;
}
.game-footer svg {
  color: var(--cell-bg-color);
}

.score {
  color: var(--score-color);
  font-weight: 900;
}

#final-score,
#score {
  font-weight: 900;
  font-size: 3rem;
  position: relative;
}

.floating-text {
  user-select: none;
  pointer-events: none;
  position: absolute;
  z-index: 10;
  font-size: 1rem;
}

.floating-text.score {
  right: 0;
  top: -25%;
}

.tile {
  width: var(--tile-size);
  height: var(--tile-size);

  display: flex;
  justify-content: center;
  align-items: center;

  font-weight: 600;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: var(--tile-border-radius);

  user-select: none;
  z-index: 1;
  transition: border 0.3s, border-radius 0.3s, width 0.3s, height 0.3s;
}

[data-type="primary"] {
  background-color: var(--primary-color);
  border-bottom: var(--cell-border-width) solid var(--primary-border-color);
}

[data-type="secondary"] {
  background-color: var(--secondary-color);
  border-bottom: var(--cell-border-width) solid var(--secondary-border-color);
}

[data-type="tertiary"] {
  background-color: var(--tertiary-color);
  border-bottom: var(--cell-border-width) solid var(--tertiary-border-color);
}

button {
  appearance: none;
  border: none;
  background-color: var(--cell-bg-color);
  padding: 1rem 2rem;
  font-size: 1.25rem;
  border-radius: 0.5rem;
  cursor: pointer;
}

button:hover {
  /* background-color: #3f3f46; */
}
button:active {
  background-color: #000;
}

#game-over {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  background-color: var(--bg-color);

  z-index: 1;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  /* Hide initially */
  opacity: 0;
  pointer-events: none;
}

#restart-game-button {
  margin-top: 2rem;
  background-color: var(--tertiary-color);
  color: var(--text-color);
  border-bottom: var(--cell-border-width) solid var(--tertiary-border-color);
}

#restart-game-button:active {
  border-color: transparent;
  transform: translateY(4px);
}

#toggle-borders-button {
}

#toggle-border-radius-button {
  border-radius: var(--cell-border-radius);
}

#theme-settings {
  /* position: fixed; */
  /* left: 0; */
  /* bottom: 0; */

  display: flex;
  margin: 1rem;
  gap: 1rem;
  transition: transform 0.3s;
}

.theme-toggle {
  width: 3rem;
  height: 3rem;
  padding: 0;
  border-bottom: var(--cell-border-width) solid;
  transition: border 0.3s;
}

.theme-toggle svg {
  width: 1rem;
  height: 1rem;
  color: var(--text-color);
}

#theme-switcher {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  margin: 1rem;
  padding-bottom: 0.25rem;
}

.theme-button {
  width: 2rem;
  height: 2rem;
  border-radius: 100%;
  padding: 0;
  border: 1px solid;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

#game-header {
  display: flex;
  flex-direction: column;

  align-items: center;
  justify-content: center;
  margin-bottom: 2rem;
}

#next-tile-container {
  position: relative;
  margin-top: 1rem;
  width: var(--cell-size);
  height: var(--cell-size);

  background-color: var(--cell-bg-color);
  border-bottom-right-radius: var(--tile-border-radius);
  border-bottom-left-radius: var(--tile-border-radius);

  display: flex;
  align-items: center;
  justify-content: center;
}

#next-tile-container:before {
  content: "";
  background-color: var(--cell-bg-color);
  width: 100%;
  height: 1rem;

  position: absolute;
  bottom: 100%;
}

#game-message {
  margin-top: 0.5rem;
  text-align: center;
}

.highlight,
*:focus-visible {
  outline: 2px solid var(--score-color);
}

#toggle-settings-button {
}

.active [aria-label="open"] {
  display: initial;
}
.active [aria-label="open"] {
  display: none;
}

[aria-label="close"] {
  display: none;
}

.active [aria-label="close"] {
  display: initial;
}

#github-badge {
  position: absolute;
  bottom: 1rem;
  right: 1rem;

  display: flex;
  justify-content: center;
  align-items: center;

  color: var(--text-color);
  opacity: 0.5;
  background-color: var(--cell-bg-color);

  padding: 1rem;
  border-radius: var(--cell-border-radius);
  transition: opacity 0.3s;
}

#github-badge:hover {
  opacity: 1;
}

#audio-toggle {
  position: fixed;
  top: 1rem;
  left: 1rem;
  width: 2rem;
  height: 2rem;
  padding: 0;
  border-bottom: var(--cell-border-width) solid;
  transition: border 0.3s;
}

#audio-toggle svg {
  width: 1rem;
  height: 1rem;
  color: var(--text-color);
}

#audio-toggle.enabled #enable-audio {
  display: none;
}

#audio-toggle:not(.enabled) #disable-audio {
  display: none;
}

#toggle-settings-button {
  position: fixed;
  z-index: 100;
  top: 1rem;
  right: 1rem;
  width: 2rem;
  height: 2rem;
  padding: 0;
  border-bottom: var(--cell-border-width) solid;
  transition: border 0.3s;
}

#toggle-settings-button svg {
  width: 1rem;
  height: 1rem;
  color: var(--text-color);
}

#settings {
  position: fixed;
  z-index: 10;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--bg-color);

  transform: translatey(-100%);
  transition: transform 0.3s, background-color 0.3s;
}

#settings.active {
  transform: translateY(0rem);
  padding-top: 0rem;
}

.demo-grid-row {
  width: calc(((var(--cell-size)) * 3) + ((var(--cell-gap)) * 2));
  height: var(--cell-size);
  margin-bottom: 2.5rem;

  display: grid;
  grid-template-columns: repeat(3, var(--cell-size));
  grid-template-rows: none;
  grid-gap: var(--cell-gap);

  transition: grid-gap 0.3s, width 0.3s, height 0.3s;
}

